# mikado-testbuilders-kata

./: .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE  LICENSE.md  LICENSE.txt  Quick Retrospective.md  README.md  TODO.md  _config.yml  pom.xml  settings.gradle  testbuilders-workshop.sln
.github/workflows/: build.yml  cmake.yml  contributors.yml  gradle.yml  kotlin.yml  maven.yml  node.yml  scala.yml
cpp/: BUILD_MANUAL.md  BuildManual.md  CMakeLists.txt  README.md  conanfile.txt  cpp_setup.sh  cpp_setup_mac.sh  cpp_setup_win.bat  testbuilders-workshop.sln  vcpkg_cpp_setup.bat  vcpkg_cpp_setup.sh
cpp/.devcontainer/: Dockerfile  devcontainer.json
cpp/app/: Application.cpp
cpp/cmake/: FindGoogleTest.cmake
cpp/lib/: CMakeLists.txt  JsonRepository.cpp
cpp/lib/purchase/: Invoice.h
cpp/src/include/client/: BooksOrder.h  Client.h  Order.h
cpp/src/include/domain/book/: Book.h
cpp/src/include/domain/country/: Currency.h
cpp/src/include/purchase/: Invoice.h
cpp/src/include/report/: ReportGenerator.h
cpp/src/include/storage/: JsonRepository.h
cpp/src/lib/: Author.cpp  Book.cpp  BooksOrder.cpp  Client.cpp  Country.cpp  CurrencyConverter.cpp  EducationalBook.cpp  IdGenerator.cpp  Invoice.cpp  JsonRepository.cpp  MainRepository.cpp  Novel.cpp  Order.cpp  PurchasedBook.cpp  ReportGenerator.cpp  Repository.cpp  TaxRule.cpp  testbuilders-workshop.vcxproj
cpp/src/lib/client/: Order.h
cpp/src/lib/domain/book/: Author.h  Novel.h
cpp/src/lib/purchase/: Invoice.h
cpp/test/: Tests.cpp
cpp/tests/: Tests.cpp  testbuilders-workshop-tests.vcxproj  testbuilders-workshop-tests.vcxproj.filters
cpp/tests/builders/: AuthorBuilder.h  CountryBuilder.h  InvoiceBuilder.h  NovelBuilder.h  PurchasedBookBuilder.h
cpp/tests/storage/: InMemoryRepository.h
csharp/: BUILD_MANUAL.md  testbuilders-workshop.sln
csharp/Application/: Application.csproj  Program.cs
csharp/Application.Tests/: Application.Tests.csproj
csharp/Application.Tests/Purchase/: InvoiceTest.cs
csharp/Application.Tests/Report/: ReportGeneratorTest.cs
csharp/Application.Tests/Storage/: InMemoryRepository.cs
csharp/Application/Client/: BooksOrder.cs
csharp/Application/Domain/Book/: Author.cs  EducationalBook.cs  IBook.cs
csharp/Application/Domain/Country/: Language.cs
csharp/Application/Purchase/: Invoice.cs  PurchasedBook.cs
csharp/Application/Report/: ReportGenerator.cs
csharp/Application/Storage/: JsonRepository.cs
docs/: 1_-_Introduction.md  1_Introduction.md  2 - Easy Fix Difficult Test.md  2_-_Easy_Fix_Difficult_Test.md  2_Easy_Fix_Difficult_Test.md  3 - Building Test Data.md  3_-_Building_Test_Data.md  3_Building_Test_Data.md  4_-_Mikado_Method_to_the_Rescue.md  4_Mikado_Method.md  4_Mikado_Method_to_the_Rescue.md  5_Conclusion.md  5_Mikado_Method_plus_Test_Data_Builders.md  Animation_Guide.md  Facilitation_Guide.md  Homework.md  README.md  Retrospectives_Guide.md  Troubleshooting.md
docs/facilitation/: 2h.md  2h30.md  CoLocalized.md  Remote.md
docs/references/: References.md  Test Data Builders.md  Test_Data_Builders.md  The_Mikado_Method.md
fsharp/: testbuilders-workshop.sln
fsharp/Application/: Application.fsproj  Domain.fs  Dto.fs  Finance.fs  Program.fs  Purchase.fs  Report.fs
fsharp/Application.Tests/: Application.Tests.fsproj  Purchase.InvoiceTests.fs  ReportTests.fs
fsharp/Application/Domain/: Book.fs  Country.fs
java/: BUILD_MANUAL.md  README.md  TODO.md  build.gradle  pom.xml  settings.gradle
java/.devcontainer/: Dockerfile  devcontainer.json
java/src/main/java/com/murex/: Application.java
kotlin/: BUILD_MANUAL.md  build.gradle.kts  settings.gradle.kts
kotlin/src/main/resources/: repository.json
scala/: BUILD_MANUAL.md  build.sbt
src/cpp/lib/: JsonRepository.cpp  PurchasedBook.cpp  TaxRule.cpp
src/csharp/Application/: Application.csproj  MainRepository.cs
src/csharp/Application/Client/: Client.cs  IOrder.cs
src/csharp/Application/Domain/Book/: Genre.cs
src/main/cpp/lib/: Author.cpp  Book.cpp  BooksOrder.cpp  Client.cpp  Country.cpp  CurrencyConverter.cpp  EducationalBook.cpp  IdGenerator.cpp  IdGenerator.h  Invoice.cpp  JsonRepository.cpp  MainRepository.cpp  MainRepository.h  Novel.cpp  Order.cpp  PurchasedBook.cpp  ReportGenerator.cpp  Repository.cpp  TaxRule.cpp  testbuilders-workshop.vcxproj  testbuilders-workshop.vcxproj.filters
src/main/cpp/lib/client/: BooksOrder.h  Client.h  Order.h
src/main/cpp/lib/finance/: CurrencyConverter.h  TaxRule.h
src/main/cpp/lib/purchase/: Invoice.h  PurchasedBook.h
src/main/cpp/lib/report/: ReportGenerator.h
src/main/cpp/lib/storage/: JsonRepository.h  Repository.h
src/main/csharp/Application/: IdGenerator.cs  MainRepository.cs  Program.cs
src/main/csharp/Application/Client/: BooksOrder.cs  Client.cs  IOrder.cs
src/main/csharp/Application/Finance/: CurrencyConverter.cs  TaxRule.cs
src/main/csharp/Application/Purchase/: Invoice.cs  PurchasedBook.cs
src/main/csharp/Application/Report/: ReportGenerator.cs
src/main/csharp/Application/Storage/: IRepository.cs  JsonRepository.cs
src/main/java/: Application.java
src/test/cpp/: InMemoryRepository.cpp  packages.config  testbuilders-workshop-tests.vcxproj  testbuilders-workshop-tests.vcxproj.filters
src/test/cpp/storage/: InMemoryRepository.h
src/test/csharp/Application.Tests/: Application.Tests.csproj  InMemoryRepository.cs  JsonRepositoryTests.cs  UnitTest1.cs
typescript/: .eslintrc.js  TODO.md  cucumber.js  package-lock.json  package.json  tsconfig.json
typescript/features/: Invoice.feature
typescript/features/step-definitions/: Invoice.steps.ts  Steps.ts
typescript/features/step_definitions/: steps.js
typescript/src/: Kata.ts
typescript/src/com/murex/: Application.ts
typescript/src/com/murex/tbw/: IdGenerator.ts  MainRepository.ts
typescript/test/: Kata.spec.ts
workshop/: 1 - Introduction.md  2 - Easy Fix Difficult Test.md  3 - Building Test Data.md  4 - Mikado Method to the Rescue.md  5 - Conclusion.md  Animation Guide.md
workshop/references/: References.md  Test Data Builders.md  The Mikado Method.md
(+191 files in other folders)
